# Linux22

./: README.md
01/: GRADING-tasks.md  factor.py
02/: GRADING-before.md  GRADING-tasks.md  before.md  tree.py  uptime.txt  wildcards.md
03/: GRADING-before.md  GRADING-tasks.md  before.md  factor.py  tree.py
04/: GRADING-before.md  GRADING-tasks.md  before.md  override.sh  row_sum.sh  second_highest_uid.sh
05/: GRADING-before.md  before.md
06/: .test.un~  GRADING-before.md  GRADING-tasks.md  before.md  dir.sh  scoring.sh  sysinfo.sh
07/: GRADING-before.md  GRADING-tasks.md  before.md  file.txt  key.pub
08/: GRADING-before.md  GRADING-tasks.md  before.md  ip.sh  markdown.sh  normalize.sh  normtest  test  timeconv.sh
09/: GRADING-before.md  GRADING-tasks.md  before.md  countdown.sh  dnf.txt  passwd.txt  signals.txt
10/: GRADING-before.md  GRADING-tasks.md  before.md  fat.txt  ip_addr.json  port_forward.txt
11/: GRADING-before.md  GRADING-tasks.md  before.md
11/tapsum2json/: requirements.txt  setup.cfg
11/tapsum2json/src/tapsum2json/: __init__.py  main.py
12/: GRADING-before.md  GRADING-tasks.md  before.md
13/: GRADING-before.md  GRADING-tasks.md  before.md
14/: GRADING-before.md  GRADING-tasks.md  before.md
21/: GRADING.md  album.tpl.html  gallery.sh  index.tpl.html
21/examples/simple/: gallery.rc
21/theme-links/: album.tpl.html
22/: GRADING.md  README  setup.cfg
22/src/templater/: __init__.py  main.py  templater.py
23/: GRADING.md  h.txt  k.txt  t.txt
