[metadata]
name = nswi177-jinja-templater 
version = 0.0.1
author = NSWI177 Jan Kotasek
author_email = kotasekj@natur.cuni.cz
description = Renders Jinja templates
long_description = file: README
long_description_content_type = text
url = https://d3s.mff.cuni.cz/teaching/nswi177/final-tasks/
keywords = jinja templater
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    Jinja2 ~= 3.1.2
    pyYAML ~= 6.0
    roman ~= 3.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    nswi177-jinja-templater = templater.main:main