[metadata]
name = tapsum2json
version = 0.0.1
author = kotasekj
author_email = kotasekj@natur.cuni.cz
description = TAP to json converter
url = https://gitlab.mff.cuni.cz/teaching/nswi177/2022/student-kotasekj.git
keywords = format converter
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires = 
    tap.py ~= 3.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    tapsum2json = tapsum2json.main:main
